--- a/register.css
+++ b/register.css
@@ -1,26 +1,278 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
-/* SECTION ONE */
-.section-one{
-    background-image: url(homeAsset/home.jpg);
+.background {
+    width: 100%;
+    height: 100%;
+    background-image: url('assets/Section1.png');
     background-size: cover;
-    width: 100vw;
-    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
 }
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    gap: 1vh;
+}
+
+.img {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.img img {
+    width: 290px;
+}
+
+.start {
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.the {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.the hr {
+    margin: auto;
+    width: 50px;
+    border: 1px solid white;
+}
+
+.right-container {
+    height: 100vh;
+    background-color: rgba(225, 225, 225, 0.7);
+    box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
+    display: flex;
+    align-items: center;
+}
+
+hr {
+    border: 1.5px solid #4EA4DC;
+    margin-bottom: 30px;
+}
+
+.form {
+    align-items: center;
+    width: 400px;
+    padding: 20px 40px;
+}
+
+.title {
+    font-size: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #4EA4DC;
+}
+
+/* #inputName{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    border: 1px solid #dadce0;
+    border-radius: 7px;
+    font-size: 16px;
+    padding: 0 20px;
+    outline: none;
+    background: none;
+    z-index: 1;
+} */
+
+.inputContainer{
+    /* position: relative; */
+    height: 45px;
+    width: 100%;
+    margin-bottom: 17px;
+    background-color: white;
+    border-radius: 7px;
+}
+
+.input {
+    /* position: absolute; */
+    height: 100%;
+    width: 100%;
+    border: 1px solid #dadce0;
+    border-radius: 7px;
+    font-size: 16px;
+    padding: 0 20px;
+    outline: none;
+    background: none;
+    z-index: 1;
+}
+
+::placeholder {
+    color: rgba(0, 0, 0, 0.2);
+}
+
+.inputContainer p {
+    font-size: 10px;
+    margin-left: 6%;
+    margin-top: 0.4%;
+    color: red;
+}
+
+.requirement p {
+    font-size: 10px;
+    margin-left: 6%;
+    margin-top: 0.4%;
+    color: red;
+}
+
+/* input:checked + .cek { */
+    /* background-color: red; */
+/* } */
+
+/* .cek {
+    border-radius: 0px;
+} */
+
+/* input[type="checkbox"] {
+    outline: 1.5px solid red;
+    border-radius: 7px;
+} */
+
+/* input[type=checkbox]:focus
+{
+    outline: 1px solid red;
+    border-radius: 7px;
+} */
+
+/* input[type=checkbox]
+{
+    background-color: #DDD;
+    border-radius: 2px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 17px;
+    height: 17px;
+    cursor: pointer;
+    position: relative;
+    top: 5px;
+}
+
+input[type=checkbox]:checked
+{
+    background-color: #409fd6;
+    background: #409fd6 url("data:image/gif;base64,R0lGODlhCwAKAIABAP////3cnSH5BAEKAAEALAAAAAALAAoAAAIUjH+AC73WHIsw0UCjglraO20PNhYAOw==") 3px 3px no-repeat;
+} */
+
+.buttonSubmit {
+    display: block;
+    margin: auto;
+    padding: 15px;
+    width: 100%;
+    border: none;
+    background-color: #4EA4DC;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.buttonSubmit:hover {
+    opacity: 70%;
+}
+
+.btn-link {
+    text-decoration: none;
+}
+
+.return {
+    color: #4EA4DC;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.return:hover {
+    opacity: 70%;
+}
+
+.btn-returnLogin {
+    text-decoration: none;
+}
+
+.imgTeen {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+}
+
+.imgTeen img {
+    height: 80px;
+    width: 150px;
+    display: block;
+}
+
+/* .show-red {
+    border: 2px solid red;
+} */
 
 /* FOOTER */
-.footer{
-    background-image: black;
-    background-size: 100% 100%;
+.footer {
+    background-color: black;
     width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 6vh;
+    font-family: 'Roboto';
+    font-weight: 100;
 }
 
-.footer img{
+.logoImg img {
+    width: 150px;
+}
+
+.box {
     display: flex;
-    position: relative;
-    width: 100%;
+    flex-direction: row;
+    gap: 3vw;
+    color: white;
+    font-size: 14px;
+}
+
+.imgTeen2 img{
+    width: 170px;
+}
+
+.sentence {
+    width: 90%;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+}
+
+.hoyo img {
+    width: 300px;
+}
+
+.copyright {
+    color: white;
+    font-size: 12px;
+    /* margin-bottom: 65px; */
+}
+
+
+@media screen and (max-width: 426px) {
+   
 }
